--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "employee_tracker",
   "version": "1.0.0",
   "description": "An application where you can manage and track your employee / team",
-  "main": "index.js",
+  "main": "app.js",
   "directories": {
     "lib": "lib"
   },
